...

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 1: Identificar Planta -->
            <androidx.cardview.widget.CardView
                android:id="@+id/btnCamera"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="3dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
...

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 2: Lista de Plantas -->
            <androidx.cardview.widget.CardView
                android:id="@+id/btnPlantList"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="3dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
...

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 3: Buscar -->
            <androidx.cardview.widget.CardView
                android:id="@+id/btnSearch"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="3dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
...
